fix h1 spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -89,8 +89,6 @@ a:focus {
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 1rem;
-  margin-top: 2em;
   font-weight: normal;
   line-height: 1.25;
   text-rendering: optimizeLegibility;
